# desktop_pets

./: .gitignore  README.md
desktop_pets/: Cargo.toml
desktop_pets/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
src_tauri/src/: Cargo.toml
src_tauri/src/services/: system_monitor.rs
src_tauri/src/utils/: file_manager.rs
src_tauri_pets_legacy/: Cargo.toml  build.rs  tauri.conf.json
src_tauri_pets_legacy/src/: main.rs
src_tauri_pets_legacy/src/models/: mod.rs  pet.rs
src_tauri_pets_legacy/src/services/: mod.rs  system_monitor.rs
