[package]
name = "desktop_pets_core"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri core framework
tauri = { version = "1.5", features = ["os-all", "fs-all", "window-all"] }

# Serialization and deserialization for JSON storage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System resource monitoring (CPU, RAM)
sysinfo = "0.30"

# Time and date handling for circadian rhythms
chrono = "0.4"

# Auto-start functionality for Windows/Mac/Linux
tauri-plugin-autostart = "0.0.0"